--- a/Prj.TaskManager/Views/Task/Create.cshtml
+++ b/Prj.TaskManager/Views/Task/Create.cshtml
@@ -12,12 +12,12 @@
     <div>
         <label asp-for="Title" class="form-label"></label>
         <input asp-for="Title" class="form-control" />
-        <span asp-validation-for="Title"></span>
+        <span asp-validation-for="Title" class="text-danger"></span>
     </div>
     <div>
         <label asp-for="Description" class="form-label"></label>
         <input asp-for="Description" class="form-control" />
-        <span asp-validation-for="Description"></span>
+        <span asp-validation-for="Description" class="text-danger"></span>
     </div>
     <div>
         <label asp-for="IsCompleted" class="form-label"></label>
